--- a/自动化脚本.ipynb
+++ b/自动化脚本.ipynb
@@ -1479,8 +1479,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T04:11:58.382005Z",
-     "start_time": "2025-11-22T04:11:58.280999Z"
+     "end_time": "2025-11-22T05:05:15.147786Z",
+     "start_time": "2025-11-22T05:05:15.071963Z"
     }
    },
    "cell_type": "code",
@@ -1488,7 +1488,7 @@
     "from datetime import datetime, timedelta, timezone\n",
     "\n",
     "JST = timezone(timedelta(hours=9))\n",
-    "start = datetime(2025, 10, 1, 15, 51, 0, tzinfo=JST)\n",
+    "start = datetime(2025, 10, 1, 17, 54, 0, tzinfo=JST)\n",
     "end   = datetime(2025,11,20, 23, 59, 0, tzinfo=JST)\n",
     "\n",
     "minutes = int((end - start).total_seconds() // 60)  # 59040\n",
@@ -1502,27 +1502,27 @@
     {
      "data": {
       "text/plain": [
-       "(72488,\n",
-       " ['2025-10-01T15:51:00+09:00',\n",
-       "  '2025-10-01T15:52:00+09:00',\n",
-       "  '2025-10-01T15:53:00+09:00'],\n",
+       "(72365,\n",
+       " ['2025-10-01T17:54:00+09:00',\n",
+       "  '2025-10-01T17:55:00+09:00',\n",
+       "  '2025-10-01T17:56:00+09:00'],\n",
        " ['2025-11-20T23:56:00+09:00',\n",
        "  '2025-11-20T23:57:00+09:00',\n",
        "  '2025-11-20T23:58:00+09:00'])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 19
+   "execution_count": 23
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T04:12:40.270478Z",
-     "start_time": "2025-11-22T04:12:05.308282Z"
+     "end_time": "2025-11-24T02:20:27.120091Z",
+     "start_time": "2025-11-24T02:20:13.471014Z"
     }
    },
    "cell_type": "code",
@@ -1531,7 +1531,7 @@
     "import os, glob, pathlib, subprocess, time, uuid, shutil\n",
     "from pathlib import Path\n",
     "import pandas as pd\n",
-    "url = \"http://127.0.0.1:8000/AppleStockChecker/purchasing-time-analyses/dispatch_ts/\"\n",
+    "url = \"http://yamaguti.ngrok.io/AppleStockChecker/purchasing-time-analyses/dispatch_ts/\"\n",
     "\n",
     "for i, ts in enumerate(timestamps, 1):\n",
     "    payload = json.dumps({\"timestamp_iso\": ts})\n",
@@ -1543,7 +1543,7 @@
     "    ).decode(\"utf-8\", \"replace\")\n",
     "    print(f\"[{i}/{len(timestamps)}] {ts}\\n{out}\\n\")\n",
     "    if i%100 == 0:\n",
-    "        time.sleep(60)\n",
+    "        time.sleep(240)\n",
     "    time.sleep(0.5)"
    ],
    "id": "87943d6ffdc650ee",
@@ -1552,197 +1552,71 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1/72488] 2025-10-01T15:51:00+09:00\n",
-      "{\"task_id\":\"353da462da8d43d48839b041b7852c96\",\"job_id\":\"353da462da8d43d48839b041b7852c96\"}\n",
+      "[1/72365] 2025-10-01T17:54:00+09:00\n",
+      "{\"task_id\":\"702257c662814b45bdf871073d226bfc\",\"job_id\":\"702257c662814b45bdf871073d226bfc\"}\n",
       "\n",
-      "[2/72488] 2025-10-01T15:52:00+09:00\n",
-      "{\"task_id\":\"cba514ac8b2247cb8362c6cc4fb101ca\",\"job_id\":\"cba514ac8b2247cb8362c6cc4fb101ca\"}\n",
+      "[2/72365] 2025-10-01T17:55:00+09:00\n",
+      "{\"task_id\":\"a6dc762bdc4f4f9fa0510ee1a46b2095\",\"job_id\":\"a6dc762bdc4f4f9fa0510ee1a46b2095\"}\n",
       "\n",
-      "[3/72488] 2025-10-01T15:53:00+09:00\n",
-      "{\"task_id\":\"50451b4dc04e4e2088b7d0ec41210b11\",\"job_id\":\"50451b4dc04e4e2088b7d0ec41210b11\"}\n",
+      "[3/72365] 2025-10-01T17:56:00+09:00\n",
+      "{\"task_id\":\"53da792b42e342fba36581d34ae8c3f5\",\"job_id\":\"53da792b42e342fba36581d34ae8c3f5\"}\n",
       "\n",
-      "[4/72488] 2025-10-01T15:54:00+09:00\n",
-      "{\"task_id\":\"a82cdd8a693a4dbea64fa4022834c0ff\",\"job_id\":\"a82cdd8a693a4dbea64fa4022834c0ff\"}\n",
+      "[4/72365] 2025-10-01T17:57:00+09:00\n",
+      "{\"task_id\":\"653e58158bff4174b8e3170870c3f8b6\",\"job_id\":\"653e58158bff4174b8e3170870c3f8b6\"}\n",
       "\n",
-      "[5/72488] 2025-10-01T15:55:00+09:00\n",
-      "{\"task_id\":\"ae5e22cc5b114c82ab2f3961dad04acd\",\"job_id\":\"ae5e22cc5b114c82ab2f3961dad04acd\"}\n",
+      "[5/72365] 2025-10-01T17:58:00+09:00\n",
+      "{\"task_id\":\"858308e33a4e4083bf3ff24133017e99\",\"job_id\":\"858308e33a4e4083bf3ff24133017e99\"}\n",
       "\n",
-      "[6/72488] 2025-10-01T15:56:00+09:00\n",
-      "{\"task_id\":\"5e8de5e0eed945eaa633c37b53c3f507\",\"job_id\":\"5e8de5e0eed945eaa633c37b53c3f507\"}\n",
+      "[6/72365] 2025-10-01T17:59:00+09:00\n",
+      "{\"task_id\":\"cc3490b1a2e84f4e9a8433c155e70378\",\"job_id\":\"cc3490b1a2e84f4e9a8433c155e70378\"}\n",
       "\n",
-      "[7/72488] 2025-10-01T15:57:00+09:00\n",
-      "{\"task_id\":\"e8ebf4b2bddc4d17b067088433d285cd\",\"job_id\":\"e8ebf4b2bddc4d17b067088433d285cd\"}\n",
+      "[7/72365] 2025-10-01T18:00:00+09:00\n",
+      "{\"task_id\":\"00836540be084717861093aa65c0e6fc\",\"job_id\":\"00836540be084717861093aa65c0e6fc\"}\n",
       "\n",
-      "[8/72488] 2025-10-01T15:58:00+09:00\n",
-      "{\"task_id\":\"e8992841ba8140b7a9360af5f2483d99\",\"job_id\":\"e8992841ba8140b7a9360af5f2483d99\"}\n",
+      "[8/72365] 2025-10-01T18:01:00+09:00\n",
+      "{\"task_id\":\"3a8b80c1bf254540926c08803d3551dd\",\"job_id\":\"3a8b80c1bf254540926c08803d3551dd\"}\n",
       "\n",
-      "[9/72488] 2025-10-01T15:59:00+09:00\n",
-      "{\"task_id\":\"97a35b9ba9cd4380ba746ab879a15431\",\"job_id\":\"97a35b9ba9cd4380ba746ab879a15431\"}\n",
+      "[9/72365] 2025-10-01T18:02:00+09:00\n",
+      "{\"task_id\":\"e1a023d7bc9c4ee88397c0293ce57e17\",\"job_id\":\"e1a023d7bc9c4ee88397c0293ce57e17\"}\n",
       "\n",
-      "[10/72488] 2025-10-01T16:00:00+09:00\n",
-      "{\"task_id\":\"a65c64f76e80419bad2d76cf7d3ccd4c\",\"job_id\":\"a65c64f76e80419bad2d76cf7d3ccd4c\"}\n",
+      "[10/72365] 2025-10-01T18:03:00+09:00\n",
+      "{\"task_id\":\"e670e7e7961240d79a5a7bb8e792c238\",\"job_id\":\"e670e7e7961240d79a5a7bb8e792c238\"}\n",
       "\n",
-      "[11/72488] 2025-10-01T16:01:00+09:00\n",
-      "{\"task_id\":\"2cecd53292aa471a90e30b5ebd4018b2\",\"job_id\":\"2cecd53292aa471a90e30b5ebd4018b2\"}\n",
+      "[11/72365] 2025-10-01T18:04:00+09:00\n",
+      "{\"task_id\":\"cd3000b696c546b3a7f2ba18e4d27746\",\"job_id\":\"cd3000b696c546b3a7f2ba18e4d27746\"}\n",
       "\n",
-      "[12/72488] 2025-10-01T16:02:00+09:00\n",
-      "{\"task_id\":\"6b8ce3aaf9e04660bb7d74e1805b4536\",\"job_id\":\"6b8ce3aaf9e04660bb7d74e1805b4536\"}\n",
+      "[12/72365] 2025-10-01T18:05:00+09:00\n",
+      "{\"task_id\":\"3484c55fc50f48e6998fa9b2e97f12a2\",\"job_id\":\"3484c55fc50f48e6998fa9b2e97f12a2\"}\n",
       "\n",
-      "[13/72488] 2025-10-01T16:03:00+09:00\n",
-      "{\"task_id\":\"fa12e60224e2466497298a10f1387636\",\"job_id\":\"fa12e60224e2466497298a10f1387636\"}\n",
+      "[13/72365] 2025-10-01T18:06:00+09:00\n",
+      "{\"task_id\":\"f7f8c9d00f7c4ab99f893b61f7ada41f\",\"job_id\":\"f7f8c9d00f7c4ab99f893b61f7ada41f\"}\n",
       "\n",
-      "[14/72488] 2025-10-01T16:04:00+09:00\n",
-      "{\"task_id\":\"4ba788fb78024ca9a851c7ac14f83536\",\"job_id\":\"4ba788fb78024ca9a851c7ac14f83536\"}\n",
+      "[14/72365] 2025-10-01T18:07:00+09:00\n",
+      "{\"task_id\":\"dd1971601dfc473cbda58c8a623c1e10\",\"job_id\":\"dd1971601dfc473cbda58c8a623c1e10\"}\n",
       "\n",
-      "[15/72488] 2025-10-01T16:05:00+09:00\n",
-      "{\"task_id\":\"3a8d3b30289041b39015aca2c89ede62\",\"job_id\":\"3a8d3b30289041b39015aca2c89ede62\"}\n",
+      "[15/72365] 2025-10-01T18:08:00+09:00\n",
+      "{\"task_id\":\"091940bea272484a907ae7307cc4a86a\",\"job_id\":\"091940bea272484a907ae7307cc4a86a\"}\n",
       "\n",
-      "[16/72488] 2025-10-01T16:06:00+09:00\n",
-      "{\"task_id\":\"5d9782c483b34ae2ac4293e7f18d38ad\",\"job_id\":\"5d9782c483b34ae2ac4293e7f18d38ad\"}\n",
+      "[16/72365] 2025-10-01T18:09:00+09:00\n",
+      "{\"task_id\":\"5bb72389d8e847fb85f405ab256f8fc9\",\"job_id\":\"5bb72389d8e847fb85f405ab256f8fc9\"}\n",
       "\n",
-      "[17/72488] 2025-10-01T16:07:00+09:00\n",
-      "{\"task_id\":\"4c89ce3d0e724517b08bcdf0ff5b91d0\",\"job_id\":\"4c89ce3d0e724517b08bcdf0ff5b91d0\"}\n",
+      "[17/72365] 2025-10-01T18:10:00+09:00\n",
+      "{\"task_id\":\"5916149629144a27a2c64c3a0582f357\",\"job_id\":\"5916149629144a27a2c64c3a0582f357\"}\n",
       "\n",
-      "[18/72488] 2025-10-01T16:08:00+09:00\n",
-      "{\"task_id\":\"3f7280a32fb04a4388bf882736f3a152\",\"job_id\":\"3f7280a32fb04a4388bf882736f3a152\"}\n",
+      "[18/72365] 2025-10-01T18:11:00+09:00\n",
+      "{\"task_id\":\"593f9ba1dd7547088e487a0979f3442c\",\"job_id\":\"593f9ba1dd7547088e487a0979f3442c\"}\n",
       "\n",
-      "[19/72488] 2025-10-01T16:09:00+09:00\n",
-      "{\"task_id\":\"8eeba32c0f4b4305a5bc4699cfe52e14\",\"job_id\":\"8eeba32c0f4b4305a5bc4699cfe52e14\"}\n",
+      "[19/72365] 2025-10-01T18:12:00+09:00\n",
+      "{\"task_id\":\"e901e646d39b4c7298fadb32552125e0\",\"job_id\":\"e901e646d39b4c7298fadb32552125e0\"}\n",
       "\n",
-      "[20/72488] 2025-10-01T16:10:00+09:00\n",
-      "{\"task_id\":\"d7ed320895464b909c4e9cf171d626df\",\"job_id\":\"d7ed320895464b909c4e9cf171d626df\"}\n",
+      "[20/72365] 2025-10-01T18:13:00+09:00\n",
+      "{\"task_id\":\"c954483e8679433d9fdcdf5873fab950\",\"job_id\":\"c954483e8679433d9fdcdf5873fab950\"}\n",
       "\n",
-      "[21/72488] 2025-10-01T16:11:00+09:00\n",
-      "{\"task_id\":\"2fbf4dc4e3f04919adeba8c266d53e7e\",\"job_id\":\"2fbf4dc4e3f04919adeba8c266d53e7e\"}\n",
+      "[21/72365] 2025-10-01T18:14:00+09:00\n",
+      "{\"task_id\":\"da39f75f34954b4fbe6906b4e3d637b9\",\"job_id\":\"da39f75f34954b4fbe6906b4e3d637b9\"}\n",
       "\n",
-      "[22/72488] 2025-10-01T16:12:00+09:00\n",
-      "{\"task_id\":\"32305304c0fa4851b6bb58acc6e275ec\",\"job_id\":\"32305304c0fa4851b6bb58acc6e275ec\"}\n",
-      "\n",
-      "[23/72488] 2025-10-01T16:13:00+09:00\n",
-      "{\"task_id\":\"125c88f3a35d4bf2a2f0c1dfb89e3b4c\",\"job_id\":\"125c88f3a35d4bf2a2f0c1dfb89e3b4c\"}\n",
-      "\n",
-      "[24/72488] 2025-10-01T16:14:00+09:00\n",
-      "{\"task_id\":\"427649fc59954b8b9a37c85e6105a6e4\",\"job_id\":\"427649fc59954b8b9a37c85e6105a6e4\"}\n",
-      "\n",
-      "[25/72488] 2025-10-01T16:15:00+09:00\n",
-      "{\"task_id\":\"a7547b8b3b054952bd16befb319ab1c6\",\"job_id\":\"a7547b8b3b054952bd16befb319ab1c6\"}\n",
-      "\n",
-      "[26/72488] 2025-10-01T16:16:00+09:00\n",
-      "{\"task_id\":\"f310c5cd48514e8eb387acc2652cdb23\",\"job_id\":\"f310c5cd48514e8eb387acc2652cdb23\"}\n",
-      "\n",
-      "[27/72488] 2025-10-01T16:17:00+09:00\n",
-      "{\"task_id\":\"498d4447c53348b4a6f6e61e0fd8e41e\",\"job_id\":\"498d4447c53348b4a6f6e61e0fd8e41e\"}\n",
-      "\n",
-      "[28/72488] 2025-10-01T16:18:00+09:00\n",
-      "{\"task_id\":\"ab9496e7c9514cdab142328756806af8\",\"job_id\":\"ab9496e7c9514cdab142328756806af8\"}\n",
-      "\n",
-      "[29/72488] 2025-10-01T16:19:00+09:00\n",
-      "{\"task_id\":\"2bcf0f01c2584356b4742fbd0f41fa8b\",\"job_id\":\"2bcf0f01c2584356b4742fbd0f41fa8b\"}\n",
-      "\n",
-      "[30/72488] 2025-10-01T16:20:00+09:00\n",
-      "{\"task_id\":\"510821fe0b4a4341b9601bf898ee00ae\",\"job_id\":\"510821fe0b4a4341b9601bf898ee00ae\"}\n",
-      "\n",
-      "[31/72488] 2025-10-01T16:21:00+09:00\n",
-      "{\"task_id\":\"71e3d440de0246c8a53ecec4570526dc\",\"job_id\":\"71e3d440de0246c8a53ecec4570526dc\"}\n",
-      "\n",
-      "[32/72488] 2025-10-01T16:22:00+09:00\n",
-      "{\"task_id\":\"ed06ca05db004e0b9116d936067313f0\",\"job_id\":\"ed06ca05db004e0b9116d936067313f0\"}\n",
-      "\n",
-      "[33/72488] 2025-10-01T16:23:00+09:00\n",
-      "{\"task_id\":\"880e0c8186444e5a99bc69caf4a05592\",\"job_id\":\"880e0c8186444e5a99bc69caf4a05592\"}\n",
-      "\n",
-      "[34/72488] 2025-10-01T16:24:00+09:00\n",
-      "{\"task_id\":\"3a65ec9c0dcc467ab665fd36ac5cfcc8\",\"job_id\":\"3a65ec9c0dcc467ab665fd36ac5cfcc8\"}\n",
-      "\n",
-      "[35/72488] 2025-10-01T16:25:00+09:00\n",
-      "{\"task_id\":\"85999bc4f4a247d3bcdf2a2f8db10dde\",\"job_id\":\"85999bc4f4a247d3bcdf2a2f8db10dde\"}\n",
-      "\n",
-      "[36/72488] 2025-10-01T16:26:00+09:00\n",
-      "{\"task_id\":\"c938f947b11b40ccbffdf417aeb0429e\",\"job_id\":\"c938f947b11b40ccbffdf417aeb0429e\"}\n",
-      "\n",
-      "[37/72488] 2025-10-01T16:27:00+09:00\n",
-      "{\"task_id\":\"4313d68cad0b499c92a685c2d81a355d\",\"job_id\":\"4313d68cad0b499c92a685c2d81a355d\"}\n",
-      "\n",
-      "[38/72488] 2025-10-01T16:28:00+09:00\n",
-      "{\"task_id\":\"a9f7177d48d54f7c8e577bd056ef70a0\",\"job_id\":\"a9f7177d48d54f7c8e577bd056ef70a0\"}\n",
-      "\n",
-      "[39/72488] 2025-10-01T16:29:00+09:00\n",
-      "{\"task_id\":\"c9e1aeff8757409b8d3812141dbccc5d\",\"job_id\":\"c9e1aeff8757409b8d3812141dbccc5d\"}\n",
-      "\n",
-      "[40/72488] 2025-10-01T16:30:00+09:00\n",
-      "{\"task_id\":\"fc4161cc8a6f4ba7bd6458ae26e1dac9\",\"job_id\":\"fc4161cc8a6f4ba7bd6458ae26e1dac9\"}\n",
-      "\n",
-      "[41/72488] 2025-10-01T16:31:00+09:00\n",
-      "{\"task_id\":\"34b0e6ae93ab484e9dd4513d10df9ab9\",\"job_id\":\"34b0e6ae93ab484e9dd4513d10df9ab9\"}\n",
-      "\n",
-      "[42/72488] 2025-10-01T16:32:00+09:00\n",
-      "{\"task_id\":\"fdda6c25c145417c99b949442d30c2b6\",\"job_id\":\"fdda6c25c145417c99b949442d30c2b6\"}\n",
-      "\n",
-      "[43/72488] 2025-10-01T16:33:00+09:00\n",
-      "{\"task_id\":\"8c91f416fc5149af93a124c04d1d1087\",\"job_id\":\"8c91f416fc5149af93a124c04d1d1087\"}\n",
-      "\n",
-      "[44/72488] 2025-10-01T16:34:00+09:00\n",
-      "{\"task_id\":\"2a3b2f21a729400c8a3066c9f7593868\",\"job_id\":\"2a3b2f21a729400c8a3066c9f7593868\"}\n",
-      "\n",
-      "[45/72488] 2025-10-01T16:35:00+09:00\n",
-      "{\"task_id\":\"9ee4e6f1755741208819e38ae1af314f\",\"job_id\":\"9ee4e6f1755741208819e38ae1af314f\"}\n",
-      "\n",
-      "[46/72488] 2025-10-01T16:36:00+09:00\n",
-      "{\"task_id\":\"070c8197367b4bf6a260a7b2127cd67b\",\"job_id\":\"070c8197367b4bf6a260a7b2127cd67b\"}\n",
-      "\n",
-      "[47/72488] 2025-10-01T16:37:00+09:00\n",
-      "{\"task_id\":\"7599a79408cf4ffe8839ead37cad7ba3\",\"job_id\":\"7599a79408cf4ffe8839ead37cad7ba3\"}\n",
-      "\n",
-      "[48/72488] 2025-10-01T16:38:00+09:00\n",
-      "{\"task_id\":\"394d6ec01c2f410b81bf5624a6be95e5\",\"job_id\":\"394d6ec01c2f410b81bf5624a6be95e5\"}\n",
-      "\n",
-      "[49/72488] 2025-10-01T16:39:00+09:00\n",
-      "{\"task_id\":\"301b267ff2704c568178e43e4cc9912f\",\"job_id\":\"301b267ff2704c568178e43e4cc9912f\"}\n",
-      "\n",
-      "[50/72488] 2025-10-01T16:40:00+09:00\n",
-      "{\"task_id\":\"2fc7457ad649477380e66fe0b47afd7d\",\"job_id\":\"2fc7457ad649477380e66fe0b47afd7d\"}\n",
-      "\n",
-      "[51/72488] 2025-10-01T16:41:00+09:00\n",
-      "{\"task_id\":\"24eb999fd14a465085e0e9e7a2ce7bb7\",\"job_id\":\"24eb999fd14a465085e0e9e7a2ce7bb7\"}\n",
-      "\n",
-      "[52/72488] 2025-10-01T16:42:00+09:00\n",
-      "{\"task_id\":\"bded56abc2b6499f89b2047ea699142c\",\"job_id\":\"bded56abc2b6499f89b2047ea699142c\"}\n",
-      "\n",
-      "[53/72488] 2025-10-01T16:43:00+09:00\n",
-      "{\"task_id\":\"9b2b645d86684c37b912495b901043ee\",\"job_id\":\"9b2b645d86684c37b912495b901043ee\"}\n",
-      "\n",
-      "[54/72488] 2025-10-01T16:44:00+09:00\n",
-      "{\"task_id\":\"8a010f12535442bdb47bd990e607cdb1\",\"job_id\":\"8a010f12535442bdb47bd990e607cdb1\"}\n",
-      "\n",
-      "[55/72488] 2025-10-01T16:45:00+09:00\n",
-      "{\"task_id\":\"af0c60f449244356bf3a16ac13b8d697\",\"job_id\":\"af0c60f449244356bf3a16ac13b8d697\"}\n",
-      "\n",
-      "[56/72488] 2025-10-01T16:46:00+09:00\n",
-      "{\"task_id\":\"7bd995b57e8b4311b86bfcbcec439931\",\"job_id\":\"7bd995b57e8b4311b86bfcbcec439931\"}\n",
-      "\n",
-      "[57/72488] 2025-10-01T16:47:00+09:00\n",
-      "{\"task_id\":\"c3b488f49aee46f1a86d2a31d92ec783\",\"job_id\":\"c3b488f49aee46f1a86d2a31d92ec783\"}\n",
-      "\n",
-      "[58/72488] 2025-10-01T16:48:00+09:00\n",
-      "{\"task_id\":\"a092c43effe74bafba9efdb02b344022\",\"job_id\":\"a092c43effe74bafba9efdb02b344022\"}\n",
-      "\n",
-      "[59/72488] 2025-10-01T16:49:00+09:00\n",
-      "{\"task_id\":\"5901d971eb4b441e9b92663afd8e7d82\",\"job_id\":\"5901d971eb4b441e9b92663afd8e7d82\"}\n",
-      "\n",
-      "[60/72488] 2025-10-01T16:50:00+09:00\n",
-      "{\"task_id\":\"d6838a1b19cd43f287a212eb7dd820c0\",\"job_id\":\"d6838a1b19cd43f287a212eb7dd820c0\"}\n",
-      "\n",
-      "[61/72488] 2025-10-01T16:51:00+09:00\n",
-      "{\"task_id\":\"c16a9e19572a4df49f412d61025ba195\",\"job_id\":\"c16a9e19572a4df49f412d61025ba195\"}\n",
-      "\n",
-      "[62/72488] 2025-10-01T16:52:00+09:00\n",
-      "{\"task_id\":\"7384550bb96846c388a916d1d2edeb0b\",\"job_id\":\"7384550bb96846c388a916d1d2edeb0b\"}\n",
-      "\n",
-      "[63/72488] 2025-10-01T16:53:00+09:00\n",
-      "{\"task_id\":\"eeef63b3883c406da9eaafba2b24bf83\",\"job_id\":\"eeef63b3883c406da9eaafba2b24bf83\"}\n",
-      "\n",
-      "[64/72488] 2025-10-01T16:54:00+09:00\n",
-      "{\"task_id\":\"06923c96b33849f28c2283bd6ee29e6c\",\"job_id\":\"06923c96b33849f28c2283bd6ee29e6c\"}\n",
+      "[22/72365] 2025-10-01T18:15:00+09:00\n",
+      "{\"task_id\":\"f0cac2ea0e9143cf8600e2a8f08340ed\",\"job_id\":\"f0cac2ea0e9143cf8600e2a8f08340ed\"}\n",
       "\n"
      ]
     },
@@ -1753,12 +1627,12 @@
      "traceback": [
       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[20], line 18\u001B[0m\n\u001B[1;32m     16\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m i\u001B[38;5;241m%\u001B[39m\u001B[38;5;241m100\u001B[39m \u001B[38;5;241m==\u001B[39m \u001B[38;5;241m0\u001B[39m:\n\u001B[1;32m     17\u001B[0m     time\u001B[38;5;241m.\u001B[39msleep(\u001B[38;5;241m60\u001B[39m)\n\u001B[0;32m---> 18\u001B[0m \u001B[43mtime\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43msleep\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m0.5\u001B[39;49m\u001B[43m)\u001B[49m\n",
+      "Cell \u001B[0;32mIn[24], line 18\u001B[0m\n\u001B[1;32m     16\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m i\u001B[38;5;241m%\u001B[39m\u001B[38;5;241m100\u001B[39m \u001B[38;5;241m==\u001B[39m \u001B[38;5;241m0\u001B[39m:\n\u001B[1;32m     17\u001B[0m     time\u001B[38;5;241m.\u001B[39msleep(\u001B[38;5;241m240\u001B[39m)\n\u001B[0;32m---> 18\u001B[0m \u001B[43mtime\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43msleep\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m0.5\u001B[39;49m\u001B[43m)\u001B[49m\n",
       "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
      ]
     }
    ],
-   "execution_count": 20
+   "execution_count": 24
   },
   {
    "metadata": {},
