--- a/pdf-rename.ipynb
+++ b/pdf-rename.ipynb
@@ -123,11 +123,54 @@
   },
   {
    "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
+   "cell_type": "markdown",
+   "source": "## 后台翻译",
+   "id": "1862dc8ffb6e13f7"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
    "source": "",
-   "id": "554106fa27d6c9f5"
+   "id": "17958b39cf34170b"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-24T02:44:59.620071Z",
+     "start_time": "2025-11-24T02:44:59.560716Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "\n",
+   "id": "554106fa27d6c9f5",
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "usage: ipykernel_launcher.py [-h] {scan,apply} ...\n",
+      "ipykernel_launcher.py: error: argument cmd: invalid choice: '/Users/syu/Library/Jupyter/runtime/kernel-146c6582-e048-40e3-8881-03ff6fc4ee7d.json' (choose from 'scan', 'apply')\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "2",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001B[0;31mSystemExit\u001B[0m\u001B[0;31m:\u001B[0m 2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/syu/miniconda3/envs/YamagotiProjects/lib/python3.10/site-packages/IPython/core/interactiveshell.py:3585: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     ]
+    }
+   ],
+   "execution_count": 4
   }
  ],
  "metadata": {
